...
   LazyVerticalGrid(
       columns = GridCells.Adaptive(150.dp),
       contentPadding = PaddingValues(16.dp, top = 100.dp),
       horizontalArrangement = Arrangement.spacedBy(16.dp),
       verticalArrangement = Arrangement.spacedBy(16.dp),
       modifier = modifier
           .testTag("ShopList")
           .fillMaxSize()
   ) {
       items(orderShop) { data ->
           ShopItem(
               image = data.shop.image,
               title = data.shop.title,
...
